--- a/captcha-demo/src/main/webapp/index.html
+++ b/captcha-demo/src/main/webapp/index.html
@@ -72,7 +72,7 @@
     <!-- 第二步 -->
         <!-- 将本页面源代码中 "公钥（点触官网获取）" 替换成 您在官网申请的公钥 -->
         <!-- 例如 <script src="http://js.touclick.com/js.touclick?b=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" ></script> -->
-    <form action="verify" method="POST" id="form" class="form" target="_blank">        
+    <form action="postdata" method="POST" id="form" class="form" target="_blank">        
         <h1 class="logo">
             JAVA DEMO
             <img src="http://captcha-static.touclick.com/SDK/sdk-static-note.png" alt="">
